# RadioGS-public

./: README.md  compute_albedo_scale_stanford.py  compute_albedo_scale_syn4.py  compute_albedo_scale_tensoir.py  eval_indirect.py  eval_material_stanford.py  eval_material_syn4.py  eval_material_tensoir.py  eval_relighting_syn4.py  eval_relighting_tensoir.py  finetune.py  finetune_relighting_tensoir.py  render.py  train.py  train_init.py
arguments/: __init__.py  refgs.py
gaussian_renderer/: __init__.py  radiogs.py  radiogs_finetune.py  ref_gaussian.py
scene/: __init__.py  cameras.py  dataset_readers.py  gaussian_model.py  light.py  radiogs_gaussian_model.py  ref_gaussian_model.py
scene/renderutils/: ops.py
scripts/: ours_finetune.sh  ours_indirect.sh  ours_s4r.sh  ours_stanfordorb.sh  ours_tir.sh
submodules/diff-surfel-rasterization/: rasterize_points.cu  rasterize_points.h  setup.py
submodules/diff-surfel-rasterization/cuda_rasterizer/: auxiliary.h  backward.cu  backward.h  config.h  forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu  rasterizer_impl.h
submodules/raytracing/: setup.py
submodules/simple-knn/: setup.py
submodules/surfel_tracer/: .gitignore  CMakeLists.txt  readme.md  setup.py
submodules/surfel_tracer/include/gtracer/: bvh.h  gpu_memory.h
submodules/surfel_tracer/include/surfel_tracer/: bvh.h  gpu_memory.h
submodules/surfel_tracer/src/: bindings.cu  bvh.cu
submodules/surfel_tracer/src/optix/: auxiliary.h  gaussiantrace_backward.cu  gaussiantrace_backward.h  gaussiantrace_forward.cu  gaussiantrace_forward.h  gaussiantrace_intersection_test.cu  gaussiantrace_intersection_test.h  program.h
submodules/surfel_tracer/surfel_tracer/: __init__.py  raytracer.py
utils/: camera_utils.py  general_utils.py  graphics_utils.py  image_utils.py  image_utils2.py  loss_utils.py  mesh_utils.py  point_utils.py  refl_utils.py
